docs/25.0.0/TracksCapabilitiesOverview.md
# IBM Cloud Pak for Business Automation (CP4BA) 25.0.0 Labs

## Track descriptions

The different tracks cater for different target groups and previous levels of exposure to Cloud Pack for Business Automation.

**Track 1 – Foundation**

- **Audience**: New to Cloud Pak for Business Automation (CP4BA)
- **Learning**: Overview of the Cloud Pak from an end-user perspective
- **Approach**: Perform the Client Onboarding scenario

**Track 2 – Developer Role / Solution Implementation**

- **Audience**: Base understanding of Cloud Pak for Business Automation (CP4BA)

- **Learning**: Overview of the Cloud Pak from developer and partly user perspective. Ability to develop pieces of the solution areas

- **Approach**: Detailed lab instructions to build respective solution aspects

**Track 3 – Administrator Role**

- **Audience**: Base understanding of Cloud Pak for Business Automation (CP4BA)

- **Learning**: Overview of the Cloud Pak from administrator/DevOps engineer perspective. Ability to install and configure components of CP4BA

- **Approach**: Detailed lab instructions to install and configure CP4BA

## Capabilities

The table below lists all capabilities sorted by track for which currently labs are offered. A capability may contain one or more labs

| Capability                                                   | Track | Approximate Duration | Badge | Survey |
| :----------------------------------------------------------- | :------------------: | :-----: | :-----: | :-----: |
| [IBM Cloud Pak for Business Automation](IBM Cloud Pak for Business Automation (End-to-End)\README.md)  |       1       |       2 hours        | <a href='https://www.credly.com/org/ibm/badge/ibm-cloud-pak-for-business-automation-tech-jam' target = '_blank'>Badge</a> \| <a href='https://learn.ibm.com/course/view.php?id=9353' target = '_blank'>Quiz</a> | <a href='https://www.surveymonkey.com/r/ba-dl-tech-jam-e2e' target = '_blank'>E2E Survey</a> |
| [IBM Business Automation Application](Business Automation Application\README.md) |      2      |      2 hours       |  <a href='https://www.credly.com/org/ibm/badge/ibm-business-automation-application-tech-jam' target = '_blank'>Badge</a> \| <a href='https://learn.ibm.com/course/view.php?id=9357' target = '_blank'>Quiz</a> | <a href='https://www.surveymonkey.com/r/ba-dl-tech-jam-baa' target = '_blank'>BAA Survey</a> |
| [IBM Business Automation Insights](Business Automation Insights\README.md) |        2        |        1 hour        | - | <a href=https://www.surveymonkey.com/r/ba-dl-tech-jam-bai target = '_blank'>BAI Survey</a> |
| [IBM FileNet Content Services](Content/README.md)        |      2      |      4-5 hours       | <a href='https://www.credly.com/org/ibm/badge/ibm-filenet-content-manager-tech-jam' target = '_blank'>Badge</a> \| <a href='https://learn.ibm.com/course/view.php?id=9358' target = '_blank'>Quiz</a> | <a href='https://www.surveymonkey.com/r/ba-dl-tech-jam-fncm' target = '_blank'>FNCM Survey</a> |
| [IBM Automation Decision Services](Decisions\README.md) |       2       |       3 hours        | <a href='https://www.credly.com/org/ibm/badge/ibm-automation-decision-services-tech-jam' target = '_blank'>Badge</a> \| <a href='https://learn.ibm.com/course/view.php?id=9416' target = '_blank'>Quiz</a> |<a href='https://www.surveymonkey.com/r/ba-dl-tech-jam-ads' target = '_blank'>ADS Survey</a>|
| [IBM Business Automation Workflow](Workflow\README.md) |      2      |      5-6 hours       | <a href='https://www.credly.com/org/ibm/badge/ibm-business-automation-workflow-tech-jam' target = '_blank'>Badge</a> \| <a href='https://learn.ibm.com/course/view.php?id=9354' target = '_blank'>Quiz</a> | <a href='https://www.surveymonkey.com/r/ba-dl-tech-jam-baw' target = '_blank'>BAW Survey</a> |
| IBM CP4BA - Bring-up Labs<br />[Lab 1 (based on CP4BA 23.0.2)](../23.0.2/Bring-up/README.md)<br />[Lab 2 (based on CP4BA 24.0.0)](../24.0.0/Bring-Up/README.md) | 3 | 8-16 hours | <a href='https://www.credly.com/org/ibm/badge/ibm-cloud-pak-for-business-automation-installation-tech-jam' target = '_blank'>Badge Lab#1</a> \|<a href='https://learn.ibm.com/course/view.php?id=11286' target = '_blank'>Quiz Lab#1</a><br /><a href='https://www.credly.com/org/ibm/badge/ibm-cloud-pak-for-business-automation-installation-.1' target = '_blank'>Badge Lab#2</a> \|<a href='https://learn.ibm.com/course/view.php?id=16836' target = '_blank'>Quiz Lab#2</a> | <a href='https://www.surveymonkey.com/r/ba-dl-tech-jam-bring-up' target = '_blank'>Bring-up Survey</a> |

